# earpeace

./: .dockerignore  .gitignore  .goreleaser.yml  Cargo.toml  Dockerfile  README.md  railway.toml
.github/workflows/: test.yml
src/: audio.rs  audio_converter.rs  audio_file.rs  audio_limiter.rs  audio_normalizer.rs  discord.rs  dsp.rs  lib.rs  main.rs
