[package]
name = "earpeace"
version = "0.1.0"
edition = "2021"
authors = ["Britton Hayes <brittonhayes@github.noreply.com>"]
description = "A friendly tool to normalize Discord soundboard clips"

[dependencies]
ebur128 = "0.1.7"
symphonia = { version = "0.5", features = ["mp3", "wav", "ogg", "vorbis"] }
symphonia-format-ogg = "0.5"
symphonia-bundle-mp3 = "0.5"
symphonia-codec-aac = "0.5"
symphonia-codec-vorbis = "0.5"
symphonia-codec-pcm = "0.5"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
directories = "5.0"
walkdir = "2.4"
log = "0.4"
env_logger = "0.10"
hound = "3.5"
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["multipart", "json"] }
dotenv = "0.15"
lame = "0.1.3"
mp3lame-encoder = "0.2.0"
serde_json = "1.0"
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"
